--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Parcel
+.parcel-cache/
+
+# Build
+build/
+
 # Logs
 logs
 *.log
@@ -102,3 +108,4 @@ dist
 
 # TernJS port file
 .tern-port
+.DS_Store
