--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodeminal",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Runs a node terminal and a node app inside your browser, locally.",
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
@@ -9,7 +9,7 @@
     "lint:quiet": "eslint ./src --ext .ts --quiet",
     "lint:fix": "eslint ./src --ext .ts --fix",
     "start": "parcel src/index.html --dist-dir ./build",
-    "build": "rm -rf ./build && parcel build --no-source-maps --dist-dir ./build && cp ./.htaccess ./build/.htaccess"
+    "build": "rm -rf ./build && parcel build --no-source-maps --dist-dir ./build --public-url ./ && cp ./.htaccess ./build/.htaccess"
   },
   "repository": {
     "type": "git",
