--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint ./src --ext .ts",
     "lint:quiet": "eslint ./src --ext .ts --quiet",
     "lint:fix": "eslint ./src --ext .ts --fix",
-    "start": "parcel src/index.html --dist-dir ./build",
+    "start": "parcel src/index.html --dist-dir ./build --https",
     "build": "rm -rf ./build && parcel build --no-source-maps --dist-dir ./build --public-url ./ && cp ./.htaccess ./build/.htaccess"
   },
   "repository": {
